# talk-protocol

./: .gitignore  Cargo.toml  README.md
imagine/: Cargo.toml
imagine/notes/: 01-rust-macros.md
imagine/src/: lib.rs  main.rs  value.rs  vm.rs
imagine/src/rtvm/: db.rs  mod.rs
imagine/tests/: smoke.rs
jsonrpc/: Cargo.toml  def.ts  test-completions.txt  test.sh
jsonrpc/src/: jsonrpc.rs  lib.rs  main.rs  parse_mixed_template.rs
jsonrpc/src/lib/: core.rs  handle.rs  mod.rs
talk_database/: Cargo.toml
talk_database/src/: lib.rs
talk_macros/: Cargo.toml  test.sh
talk_macros/src/: ignore.rs  lib.rs
talk_macros/tests/: smoke.rs
talk_macros_impl/: Cargo.toml
talk_macros_impl/src/: lib.rs
