[package]
name = "jsonrpc"
version = "0.1.0"
authors = ["Cole Lawrence <colelawr@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "jsonrpc"
path = "src/jsonrpc.rs"

[dependencies]
jsonrpc-stdio-server = { git = "https://github.com/paritytech/jsonrpc" }
serde = "1.0"
serde_derive = "1.0"
# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"
erased-serde = "0.3"
imagine = { path = "../imagine" }
